docs: the swagger arrangement it will be done again
