# src/configs/swagger.json
@@ -123,6 +123,16 @@
         }
       }
     },
+    "/users/forgotPassword": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "tags": [
@@ -155,16 +165,6 @@
         "responses": {
           "201": {
             "description": "Created"
-          }
-        }
-      }
-    },
-    "/users/forgotPassword": {
-      "post": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
           }
         }
       }
@@ -1197,174 +1197,6 @@
               "type": "array",
               "example": [],
               "items": {}
-            }
-          }
-        }
-      }
-    },
-    "Order": {
-      "type": "object",
-      "properties": {
-        "userId": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "ref": {
-              "type": "string",
-              "example": "User"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
-        },
-        "items": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "productId": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "function"
-                  },
-                  "ref": {
-                    "type": "string",
-                    "example": "Product"
-                  },
-                  "required": {
-                    "type": "boolean",
-                    "example": true
-                  }
-                }
-              },
-              "quantity": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "function"
-                  },
-                  "required": {
-                    "type": "boolean",
-                    "example": true
-                  }
-                }
-              },
-              "price": {
-                "type": "object",
-                "properties": {
-                  "type": {
-                    "type": "function"
-                  },
-                  "required": {
-                    "type": "boolean",
-                    "example": true
-                  }
-                }
-              }
-            }
-          }
-        },
-        "address": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            },
-            "trim": {
-              "type": "boolean",
-              "example": true
-            }
-          }
-        },
-        "amount": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "default": {
-              "type": "number",
-              "example": 0
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            }
-          }
-        },
-        "status": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "enum": {
-              "type": "array",
-              "example": [
-                "Pending",
-                "Preparing",
-                "Shipped",
-                "Delivered",
-                "Cancelled"
-              ],
-              "items": {
-                "type": "string"
-              }
-            },
-            "default": {
-              "type": "string",
-              "example": "Pending"
-            }
-          }
-        },
-        "paymentMethod": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            },
-            "enum": {
-              "type": "array",
-              "example": [
-                "COD",
-                "Stripe"
-              ],
-              "items": {
-                "type": "string"
-              }
-            },
-            "default": {
-              "type": "string",
-              "example": "COD"
-            }
-          }
-        },
-        "payment": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "function"
-            },
-            "required": {
-              "type": "boolean",
-              "example": true
-            },
-            "default": {
-              "type": "boolean",
-              "example": false
             }
           }
         }
