# src/routes/user.js
@@ -6,14 +6,15 @@ const { list, create, read, update, deletee, forgotPassword, changePassword } = 
 const { isLogin, isAdmin} = require('../middlewares/permissions')
 // URL: /users
 
+router.post('/forgotPassword', forgotPassword);
 
+router.use(isLogin)
 
 router.route('/').get(isAdmin, list).post(create);
 
-router.post('/forgotPassword', forgotPassword);
 router.post('/changePassword', changePassword);
 
-router.route('/:id').get(isLogin, read).put(isLogin, update).patch(isLogin, update).delete(isAdmin, deletee);
+router.route('/:id').get(read).put(update).patch(update).delete(isAdmin, deletee);
 
 /* ------------------------------------------------------- */
 module.exports = router;
